new scene product item with her controller added
Insertion of product object scenes with their configurations and controllers, management of read scene, where depending on the button call the items change (for example, if I call product list button, then the product item scenes come out)

--- a/GeostoreFX/src/main/resources/org/scenes/chooseTUserAdmin.fxml
+++ b/GeostoreFX/src/main/resources/org/scenes/chooseTUserAdmin.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" prefHeight="600.0" prefWidth="610.0" stylesheets="@../css/font_geostore.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.controller.ChooseTUserAdminController">
+<VBox alignment="TOP_CENTER" prefHeight="600.0" prefWidth="610.0" stylesheets="@../css/font_geostore.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.controller.ChooseTUserController">
    <children>
       <HBox alignment="CENTER" prefHeight="55.0">
          <children>
