Creation product item scenes
Management of the creation of product item scenes, with the impossibility of inserting alphabetic characters in the price and available quantity fields

--- a/GeostoreFX/src/main/resources/org/scenes/mask/productMask.fxml
+++ b/GeostoreFX/src/main/resources/org/scenes/mask/productMask.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.control.ChoiceBox?>
 
 <VBox alignment="TOP_CENTER" prefHeight="241.0" prefWidth="582.0" stylesheets="@../../css/font_geostore.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.controller.mask.ProductMaskController">
    <children>
@@ -14,12 +15,12 @@
                <children>
                   <HBox alignment="CENTER_RIGHT" prefHeight="31.0" spacing="5.0">
                      <children>
-                        <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" styleClass="label-font" text="Nome" textAlignment="RIGHT" textFill="WHITE" wrapText="true">
+                        <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" styleClass="label-font-min2-title" text="Nome" textAlignment="RIGHT" textFill="WHITE" wrapText="true">
                            <font>
                               <Font size="11.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="name" prefHeight="25.0" style="-fx-background-radius: 7;" styleClass="label-font">
+                        <TextField fx:id="name" prefHeight="25.0" prefWidth="164.0" style="-fx-background-radius: 7;" styleClass="label-font-min2-title">
                            <font>
                               <Font size="11.0" />
                            </font>
@@ -28,12 +29,12 @@
                   </HBox>
                   <HBox alignment="CENTER_RIGHT" layoutX="10.0" layoutY="10.0" prefHeight="31.0" prefWidth="200.0" spacing="5.0">
                      <children>
-                        <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" styleClass="label-font" text="Prezzo" textAlignment="RIGHT" textFill="WHITE" wrapText="true">
+                        <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" styleClass="label-font-min2-title" text="Prezzo" textAlignment="RIGHT" textFill="WHITE" wrapText="true">
                            <font>
                               <Font size="11.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="price" prefHeight="25.0" style="-fx-background-radius: 7;" styleClass="label-font">
+                        <TextField fx:id="price" onKeyTyped="#patternNumberPrice" prefHeight="25.0" prefWidth="164.0" style="-fx-background-radius: 7;" styleClass="label-font-min2-title">
                            <font>
                               <Font size="11.0" />
                            </font>
@@ -42,44 +43,32 @@
                   </HBox>
                   <HBox alignment="CENTER_RIGHT" layoutX="10.0" layoutY="41.0" prefHeight="31.0" prefWidth="200.0" spacing="5.0">
                      <children>
-                        <Label styleClass="label-font" text="Disponibilità" textFill="WHITE" wrapText="true">
+                        <Label styleClass="label-font-min2-title" text="Disponibilità" textFill="WHITE" wrapText="true">
                            <font>
                               <Font size="8.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="available" prefHeight="25.0" style="-fx-background-radius: 7;" styleClass="label-font">
-                           <font>
-                              <Font size="11.0" />
-                           </font>
-                        </TextField>
+                        <ChoiceBox fx:id="available" prefWidth="164.0" prefHeight="25.0" style="-fx-background-radius: 7;" styleClass="label-font-min2-title" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER_RIGHT" layoutX="10.0" layoutY="72.0" prefHeight="31.0" prefWidth="200.0" spacing="5.0">
                      <children>
-                        <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" styleClass="label-font" text="Categoria" textAlignment="RIGHT" textFill="WHITE" wrapText="true">
+                        <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" styleClass="label-font-min2-title" text="Categoria" textAlignment="RIGHT" textFill="WHITE" wrapText="true">
                            <font>
                               <Font size="11.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="category" prefHeight="26.0" style="-fx-background-radius: 7;" styleClass="label-font">
-                           <font>
-                              <Font size="11.0" />
-                           </font>
-                        </TextField>
+                        <ChoiceBox fx:id="category" prefHeight="26.0" prefWidth="164.0" style="-fx-background-radius: 7;" styleClass="label-font-min2-title" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER_RIGHT" layoutX="10.0" layoutY="104.0" prefHeight="31.0" prefWidth="200.0" spacing="5.0">
                      <children>
-                        <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" styleClass="label-font" text="Materia" textAlignment="RIGHT" textFill="WHITE" wrapText="true">
+                        <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" styleClass="label-font-min2-title" text="Materia" textAlignment="RIGHT" textFill="WHITE" wrapText="true">
                            <font>
                               <Font size="11.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="material" prefHeight="25.0" style="-fx-background-radius: 7;" styleClass="label-font">
-                           <font>
-                              <Font size="11.0" />
-                           </font>
-                        </TextField>
+                        <ChoiceBox fx:id="material" prefHeight="25.0" prefWidth="164.0" style="-fx-background-radius: 7;" styleClass="label-font-min2-title" />
                      </children>
                   </HBox>
                </children>
@@ -88,12 +77,12 @@
                <children>
                   <HBox alignment="CENTER_RIGHT" prefHeight="31.0" spacing="5.0">
                      <children>
-                        <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="24.0" prefWidth="120.0" styleClass="label-font" text="Quantità disponibile" textAlignment="RIGHT" textFill="WHITE" wrapText="true">
+                        <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="24.0" prefWidth="120.0" styleClass="label-font-min2-title" text="Quantità disponibile" textAlignment="RIGHT" textFill="WHITE" wrapText="true">
                            <font>
                               <Font size="10.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="quantity" prefHeight="26.0" prefWidth="154.0" style="-fx-background-radius: 7;" styleClass="label-font">
+                        <TextField fx:id="quantity" onKeyTyped="#patternNumberQuantity" prefHeight="26.0" prefWidth="164.0" style="-fx-background-radius: 7;" styleClass="label-font-min2-title">
                            <font>
                               <Font size="11.0" />
                            </font>
