--- a/GeostoreFX/src/main/resources/org/scenes/item/productItem.fxml
+++ b/GeostoreFX/src/main/resources/org/scenes/item/productItem.fxml
@@ -162,6 +162,18 @@
                         </ImageView>
                      </graphic>
                   </Button>
+                  <Button fx:id="shop" onAction="#shopping" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="35.0" prefWidth="40.0" style="-fx-background-radius: 7; -fx-background-color: #2352A4;" textAlignment="CENTER">
+                     <HBox.margin>
+                        <Insets bottom="5.0" />
+                     </HBox.margin>
+                     <graphic>
+                        <ImageView fitHeight="23.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../images/shop.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
                </children>
             </HBox>
          </children>
