--- a/GeostoreFX/src/main/resources/org/scenes/masks/newsMask.fxml
+++ b/GeostoreFX/src/main/resources/org/scenes/masks/newsMask.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -19,7 +18,7 @@
       <HBox alignment="TOP_CENTER" layoutX="10.0" layoutY="10.0" prefHeight="238.0" prefWidth="310.0">
          <children>
             <Label alignment="CENTER" contentDisplay="CENTER" styleClass="label-font" text="Testo:" textAlignment="CENTER" textFill="WHITE" />
-            <TextArea fx:id="text" prefHeight="208.0" prefWidth="208.0" styleClass="label-font-min-title" wrapText="true">
+            <TextArea fx:id="text" onMouseEntered="#showPopOver" onMouseExited="#hidePopOver" prefHeight="208.0" prefWidth="208.0" styleClass="label-font-min-title" wrapText="true">
                <font>
                   <Font size="10.0" />
                </font>
